@@ -19,7 +19,7 @@
  * You should have received a copy of the GNU General Public License
  * along with "prooftree". If not, see <http://www.gnu.org/licenses/>.
  * 
- * $Id: draw_tree.ml,v 1.51 2013/08/04 19:51:30 tews Exp $
+ * $Id: draw_tree.ml,v 1.52 2013/08/10 22:31:13 tews Exp $
  *)
 
 
@@ -423,7 +423,7 @@ object
       when the corresponding element in the proof-tree display is
       deleted.
   *)
-  method delete_non_sticky_node_window : unit
+  method delete_attached_node_window : unit
 end
 
 
@@ -1186,7 +1186,7 @@ object (self)
   (** Delete all non-sticky external node windows of this node.
   *)
   method delete_non_sticky_external_windows =
-    List.iter (fun w -> w#delete_non_sticky_node_window) external_windows
+    List.iter (fun w -> w#delete_attached_node_window) external_windows
 
   (** Propagate this nodes existentials to all its children. This
       method is not recursive. It is used during normal operation,
